MDEV-18281 COM_RESET_CONNECTION changes the connection encoding

Store original charset during client authentication, and restore it for
COM_RESET_CONNECTION